crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__nested__v_if_inside_v_for.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<div v-for=\"item in items\"><span v-if=\"item.ok\">{{ item.text }}</span></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<!--[-->`)
  _ssrRenderList(_ctx.items, (item) => {
    _push(`<div>`)
    if (item.ok) {
      _push(`<span>${_ssrInterpolate(item.text)}</span>`)
    } else {
      _push(`<!---->`)
    }
    _push(`</div>`)
  })
  _push(`<!--]-->`)
}
